<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="bottom"
    android:background="@drawable/header_background"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circular_background"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/nav_header_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:contentDescription="@string/school_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/icon" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nav_header_school_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/nav_header_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school_slogan"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>

</LinearLayout>