<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SchoolLifeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/blog_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/aboutus_image"
                android:src="@drawable/schoollife"
                android:scaleType="centerCrop"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#80000000"/>

            <TextView
                android:id="@+id/blogtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:padding="8dp"
                android:text="@string/school_life"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </FrameLayout>

        <TextView
            android:id="@+id/about_us_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/school_life"
            android:textColor="@color/black"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="46sp"
            android:fontFamily="sans-serif"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <!--    about_us_paragraph    -->
        <TextView
            android:id="@+id/about_us_paragraph12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingTop="8dp"
            android:paddingBottom="14dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/about_us_paragraph12"
            android:justificationMode="inter_word"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/about_us_paragraph13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingTop="8dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/about_us_paragraph13"
            android:justificationMode="inter_word"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/activities_include"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingTop="8dp"
            android:paddingBottom="14dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textStyle="bold"
            android:text="@string/activities_include"
            android:justificationMode="inter_word"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/lightPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/camps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/camps"
                    android:textColor="@color/black"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="46sp"
                    android:fontFamily="sans-serif"
                    android:textAllCaps="true"/>
                <TextView
                    android:id="@+id/about_us_paragraph14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingTop="8dp"
                    android:paddingBottom="14dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/about_us_paragraph14"
                    android:justificationMode="inter_word"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/about_us_paragraph15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingTop="8dp"
                    android:paddingBottom="14dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/about_us_paragraph15"
                    android:justificationMode="inter_word"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/about_us_paragraph16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingTop="8dp"
                    android:paddingBottom="14dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/about_us_paragraph16"
                    android:justificationMode="inter_word"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/about_us_paragraph17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingTop="8dp"
                    android:paddingBottom="14dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/about_us_paragraph17"
                    android:justificationMode="inter_word"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/about_us_paragraph18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingTop="8dp"
                    android:paddingBottom="14dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/about_us_paragraph18"
                    android:justificationMode="inter_word"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/about_us_paragraph19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingTop="8dp"
                    android:paddingBottom="14dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/about_us_paragraph19"
                    android:justificationMode="inter_word"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/about_us_paragraph20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingTop="8dp"
                    android:paddingBottom="14dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/about_us_paragraph20"
                    android:justificationMode="inter_word"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/image_5"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/aboutus_image"
            android:src="@drawable/image_5"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/image_1"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:paddingTop="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/aboutus_image"
            android:src="@drawable/image_1"
            android:scaleType="centerCrop"/>
        <ImageView
            android:id="@+id/image_2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:paddingTop="16dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/aboutus_image"
            android:src="@drawable/image_2"
            android:scaleType="centerCrop"/>
        <ImageView
            android:id="@+id/image_3"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:paddingTop="16dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/aboutus_image"
            android:src="@drawable/image_3"
            android:scaleType="centerCrop"/>
        <ImageView
            android:id="@+id/image_4"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:paddingTop="16dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/aboutus_image"
            android:src="@drawable/image_4"
            android:scaleType="centerCrop"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#80000000"/>
    </LinearLayout>
</ScrollView>